# LambdaInterpreter

./: dune-project  interpreterLambdaBruijn.opam  readme.md
examples/: test1.br  test_app_vars.br  test_kylian.br  test_multiple_lines.br
lib/: ast.ml  dune  hcons.ml  lexer.mll  parser.mly
test/: dune  test_app_vars.ml  test_loAll.ml
